syntax = "proto3";
package finschia.or.settlement.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "finschia/or/settlement/v1/settlement.proto";

option go_package = "github.com/Finschia/finschia-sdk/x/or/settlement/types";

// Query defines the gRPC querier service.
service Query {
  // instead of getStepNumber, isSearching, and getProposedState
  rpc Challenge(QueryChallengeRequest) returns (QueryChallengeResponse) {
    option (google.api.http).get = "/finschia/or/settlement/v1/challenge/{challenge_id}";
  }
}

message QueryChallengeRequest {
  string challenge_id = 1;
}

message QueryChallengeResponse {
  Challenge challenge = 1;
}
